# abstracton

./: .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  DodoParser.cpp  DodoParser.h  solve_dodo.cpp
examples/: CMakeLists.txt  create_nfts.cpp  playground.cpp
include/abstracton/: abstracton.hpp  interpretations.hpp  mata_extensions.hpp
include/abstracton/utils/: utils.hpp
src/: CMakeLists.txt  abstracton.cpp  interpretations.cpp  mata_extensions.cpp
tests/: CMakeLists.txt  inductive-sets.cpp  mata-extensions.cpp  mata_extensions.cpp  preach.cpp
tests/utils/: utils.cpp
